// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser return statements parses expression returns 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "startingLocation": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [
          Return {
            "tokens": Object {
              "return": Object {
                "isReserved": true,
                "kind": 81,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "return",
              },
            },
            "value": Call {
              "args": Array [],
              "callee": Variable {
                "name": Object {
                  "isReserved": false,
                  "kind": 29,
                  "literal": undefined,
                  "location": Object {
                    "end": Object {
                      "column": -9,
                      "line": -9,
                    },
                    "start": Object {
                      "column": -9,
                      "line": -9,
                    },
                  },
                  "text": "RebootSystem",
                },
              },
              "closingParen": Object {
                "isReserved": false,
                "kind": 1,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": ")",
              },
            },
          },
        ],
      },
      "end": Object {
        "isReserved": false,
        "kind": 53,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 65,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [],
      "returns": 9,
    },
    "name": Object {
      "isReserved": false,
      "kind": 29,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "foo",
    },
  },
]
`;

exports[`parser return statements parses literal returns 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "startingLocation": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [
          Return {
            "tokens": Object {
              "return": Object {
                "isReserved": true,
                "kind": 81,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "return",
              },
            },
            "value": Literal {
              "_location": undefined,
              "value": BrsString {
                "kind": 2,
                "value": "test",
              },
            },
          },
        ],
      },
      "end": Object {
        "isReserved": false,
        "kind": 53,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 65,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [],
      "returns": 9,
    },
    "name": Object {
      "isReserved": false,
      "kind": 29,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "foo",
    },
  },
]
`;

exports[`parser return statements parses void returns 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "startingLocation": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [
          Return {
            "tokens": Object {
              "return": Object {
                "isReserved": true,
                "kind": 81,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "return",
              },
            },
            "value": undefined,
          },
        ],
      },
      "end": Object {
        "isReserved": false,
        "kind": 53,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 65,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [],
      "returns": 9,
    },
    "name": Object {
      "isReserved": false,
      "kind": 29,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "foo",
    },
  },
]
`;
